--- a/zh-cn/index.html
+++ b/zh-cn/index.html
@@ -1,21 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8; IE=edge"/>
+	<meta name="renderer" content="webkit">
 	<title>Prima</title>
+	<!-- Bootstrap core CSS -->
+	<link rel="stylesheet" href="../lib/bootstrap/dist/css/bootstrap.min.css">
+	<!-- Prima core CSS -->
+	<link rel="stylesheet" href="../modules/core/style/prima.css">
 </head>
 <body>
-<header ng-include="'core/header.html'" class=""></header>
-<nav ng-include="'core/left.html'" class="left"></nav>
-<section class="container">
-	<section ui-view></section>
-</section>
+<header ng-include="'core/header.html'"></header>
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-sm-2 col-md2 sidebar" ng-include="'core/sidebar.html'"></div>
+		<div class="col-sm10 col-md-10">
+			<breadcrumbs display-name="data.displayName" front-msg="当前页面"></breadcrumbs>
+			<div class="content-main" ui-view></div>
+		</div>
+	</div>
+</div>
 
 <!-- vendor -->
 <script type="text/javascript" src="../lib/angular/angular.min.js"></script>
 <script type="text/javascript" src="../lib/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script type="text/javascript" src="../lib/plugin/i18n.js"></script>
 <script type="text/javascript" src="../lib/plugin/alert.js"></script>
+<script type="text/javascript" src="../lib/plugin/breadcrumbs.js"></script>
 <!-- main -->
 <script type="text/javascript" src="../modules/config.js"></script>
 <script type="text/javascript" src="../modules/application.js"></script>
