--- a/zh-cn/index.html
+++ b/zh-cn/index.html
@@ -3,11 +3,11 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8; IE=edge"/>
 	<meta name="renderer" content="webkit">
-	<title>Prima</title>
+	<title></title>
 	<!-- Bootstrap core CSS -->
 	<link rel="stylesheet" href="../lib/bootstrap/dist/css/bootstrap.min.css">
-	<!-- Prima core CSS -->
-	<link rel="stylesheet" href="../modules/core/style/prima.css">
+	<!-- project core CSS -->
+	<link rel="stylesheet" href="../modules/core/style/main.css">
 </head>
 <body>
 <header ng-include="'core/header.html'"></header>
